# ecom_project

./: .gitignore  note  readme.md
AI/ecom_agent/: .env.example  .gitignore  Dockerfile  README.md  adk_config.json  pyproject.toml  requirements.txt  run_server.py  start.ps1  start.sh
AI/ecom_agent/host/: __init__.py  agent_main.py  call_api.py  school_mcp_server.py  tools.py  util.py
AI/ecom_agent/host/agent/: __init__.py  order_agent.py  order_promtp.py  product_detail_agent.py  product_detail_promtp.py  rag_agent.py  rag_promtp.py  voucher_agent.py  voucher_promtp.py
AI/rag_redis/: README.md  note  start.bat  start.ps1  start.sh  tool.py
api_system/: docker-compose copy.yaml  run_all.sh
api_system/ecom_analytics_service/: .env.docker.example  .gitignore  Dockerfile  Makefile  app.env.example  docker-run.sh  go.mod  go.sum  main.go  readme.md  sqlc.yaml
api_system/ecom_order_service/: .dockerignore  .env.docker.example  Dockerfile  README.md  VOUCHER_MANAGEMENT_API.md  app.env.example  docker-run.sh  go.mod  go.sum  main.go  note.txt  rule.txt  sqlc.yaml
api_system/ecom_payment-service/: .env.docker.example  .gitignore  Dockerfile  README1.md  app.env.example  docker-run.sh  go.mod  main.go  note.txt  sqlc.yaml
api_system/ecom_payment_service/: .env.docker.example  Dockerfile  README1.md  app.env.example  docker-compose.yaml  docker-run.sh  go.mod  go.sum  lenhdockerchaylai  main.go  rule.txt
api_system/ecom_product_service/: .env.docker,example  Dockerfile  Makefile  README2.md  app.env.example  docker-run.sh  (+4 more)
test_performance_api/: note  test.js
(+389 files in other folders)
